[gd_scene load_steps=10 format=3 uid="uid://2ah2rqdrab34"]

[ext_resource type="Texture2D" uid="uid://i8ocrsrkgh6g" path="res://components/pod_components/pod_capsule/assets/capsule.svg" id="1_bkxi3"]
[ext_resource type="Texture2D" uid="uid://buepx8vjetvpa" path="res://components/pod_components/pod_capsule/assets/body.svg" id="2_8k7rf"]
[ext_resource type="Script" uid="uid://dm8dgoy0dhl72" path="res://content/mission_types/protect_mission/protect_mission.gd" id="2_cxm12"]
[ext_resource type="Texture2D" uid="uid://wp04yeqqiws4" path="res://components/pod_components/pod_capsule/assets/eye.svg" id="3_e0gtc"]
[ext_resource type="Texture2D" uid="uid://cvrsfsqkyq4uj" path="res://components/pod_components/pod_capsule/assets/head.svg" id="4_8dtvk"]
[ext_resource type="Texture2D" uid="uid://dtrjmwitdmkj3" path="res://components/pod_components/pod_capsule/assets/capsule_window.svg" id="5_wga15"]
[ext_resource type="Shader" uid="uid://xa3qoxlvdsyx" path="res://common/shaders/radial_bar.gdshader" id="6_7xscr"]
[ext_resource type="Texture2D" uid="uid://daefwxou2v824" path="res://common/art/particles/circle.png" id="7_lpm48"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0knjk"]
shader = ExtResource("6_7xscr")

[node name="ProtectMission" type="Node2D"]
self_modulate = Color(0.255997, 0.40567, 0.366686, 1)
z_index = -1
position = Vector2(919, 520)
script = ExtResource("2_cxm12")

[node name="Capsule" type="Sprite2D" parent="."]
self_modulate = Color(0.117647, 0.737255, 0.45098, 1)
scale = Vector2(2, 2)
texture = ExtResource("1_bkxi3")

[node name="Body" type="Sprite2D" parent="Capsule"]
self_modulate = Color(0.117647, 0.737255, 0.45098, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_8k7rf")

[node name="Head" type="Sprite2D" parent="Capsule"]
self_modulate = Color(0.117647, 0.737255, 0.45098, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_8dtvk")

[node name="LeftEye" type="Sprite2D" parent="Capsule/Head"]
position = Vector2(-14, -10)
texture = ExtResource("3_e0gtc")

[node name="RightEye" type="Sprite2D" parent="Capsule/Head"]
position = Vector2(14, -10)
texture = ExtResource("3_e0gtc")

[node name="Costume" type="Sprite2D" parent="Capsule/Head"]

[node name="Window" type="Sprite2D" parent="Capsule"]
modulate = Color(1, 1, 1, 0.501961)
use_parent_material = true
texture = ExtResource("5_wga15")

[node name="Front" type="Sprite2D" parent="Capsule"]
modulate = Color(0.117647, 0.737255, 0.45098, 1)
self_modulate = Color(1, 1, 1, 0.596078)
texture = ExtResource("1_bkxi3")

[node name="ProgressBar" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_0knjk")
instance_shader_parameters/fill_ratio = 0.75
instance_shader_parameters/fill_span_offset_rad = 3.96
instance_shader_parameters/fill_span_rad = 4.79
instance_shader_parameters/filled_color = Color(0.568627, 0.858824, 0.411765, 1)
instance_shader_parameters/inner_radius = 46.58
instance_shader_parameters/outer_radius = 58.0
instance_shader_parameters/unfilled_color = Color(0.243137, 0.207843, 0.27451, 1)
custom_minimum_size = Vector2(153, 153)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -153.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("7_lpm48")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
